# agentic-ai-curator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml
config/: agents.yaml  runtime.py  settings.py  source_registry.json  tasks.yaml
core/: orchestrator.py  pipeline.py
core/stages/: cluster_stage.py  digest_stage.py  fetch_stage.py  score_stage.py
crews/: digest_crew.py
docs/: architecture.md  configuration-and-thresholds.md  developer-workflow.md  getting-started.md  outputs-and-diagnostics.md  pipeline-stages.md  project-overview.md
models/: cluster_candidate.py  crew_contracts.py  diagnostics.py  digest_report.py  event.py  event_dossier.py  evidence_card.py  normalized_item.py  pipeline_types.py  raw_item.py  scored_item.py
outputs/: latest.html  weekly_diagnostics_2026_04_21.md
scripts/: audit_extraction.py  export_crispybrain_memories.py
services/clustering/: cluster_refinement_service.py  coarse_clusterer.py  embedding_service.py
services/digest/: diagnostics_service.py  digest_composer.py  digest_html_assets.py  digest_html_renderer.py  digest_html_template.py  summary_utils.py
services/fetch/: api_fetcher.py  html_fetcher.py  rss_fetcher.py  social_fetcher.py  source_fetch_service.py
tests/: conftest.py  test_article_urls.py  test_coarse_clusterer.py  test_crispybrain_export.py  test_dates.py  test_diagnostics_service.py  test_digest_composer.py  test_digest_crew_retries.py  test_digest_html_renderer.py  test_event_scoring.py  test_evidence_builder.py  test_fetch_executor.py  test_html_fetcher.py  test_json_utils.py  test_normalizer.py  test_output_store.py  test_pipeline_helpers.py  test_pipeline_run_stage.py  test_pipeline_smoke.py  test_run_pipeline_cli.py  test_semantic_scoring_service.py  test_stage_units.py  test_summary_utils.py
utils/: dates.py  hashing.py  json_utils.py  logging_utils.py  metrics.py  text.py
(+9 files in other folders)
